--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -26,6 +26,9 @@ main {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   @include boxStyles();
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 10px;
 }
 
 aside {
