--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -7,7 +7,10 @@ body {
   width: calc(100vw - 20px);
   background: linear-gradient(to bottom right, $darker-purple, $darker-purple,  $dark-purple);
   font-family: $font;
-  color: pink;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 14px; 
+  color: $lightblue;
 }
 
 header {
@@ -27,8 +30,15 @@ main {
   grid-row: 2 / 3;
   @include boxStyles();
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 15px;
+  padding: 10px;
+
+  article {
+    background-color: $purple;
+    border: $grid-border;
+    box-shadow: 2px 2px $lightblue, 5px 5px $pink;
+  }
 }
 
 aside {
