--- a/src/css/_trip_styles.scss
+++ b/src/css/_trip_styles.scss
@@ -3,18 +3,16 @@
     background-color: $purple;
     border: $grid-border;
     box-shadow: 4px 4px $blue, 7px 7px $light-blue;
-    color: $pink;
+    color: $dark-purple;
     font-weight: lighter;
     font-size: 18px;
-    background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 
     .location-image {
-      z-index: 2;
       height: 100%;
       width: 100%;
     }
@@ -23,12 +21,15 @@
       background-color: rgba(255, 255, 255, 0.523);
       display: flex;
       flex-direction: column;
-      justify-self: center;
+      justify-content: center;
       align-items: center;;
-      padding: 5px;
-      height: 100%;
-      width: 100%;
+      padding: 15px;
+      height: 75%;
+      width: 60%;
     }
 
+    p {
+      align-self: center;
+    }
   }
 }
