--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -31,9 +31,9 @@ $font: BlenderProBold, sans-serif;
   display: none;
 }
 
-.pop-up {
-  z-index: 1;
-}
+// .pop-up {
+//   z-index: 1;
+// }
 
 // COLORS
 $black: #09071a;
