--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "nav_styles";
 @import "trip_styles";
+@import "modal_styles";
 
 body {
   @include gridDisplay(2fr 8fr 2fr, 1.5fr 9fr 1.5fr);
@@ -30,7 +31,7 @@ nav {
   @include sideStyles;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 
   @include navStyles;
@@ -55,6 +56,10 @@ main {
 aside {
   grid-column: 3 / 4;
   grid-row: 2 / 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   @include sideStyles;
 }
 
@@ -65,38 +70,6 @@ footer {
 }
 
 .modal {
-  display: none;
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-      
-      &close:hover,
-      &close:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-      }
-    }
-  }
+  @include modalStyles;
 }
 
