--- a/src/css/_modal_styles.scss
+++ b/src/css/_modal_styles.scss
@@ -1,34 +1,72 @@
+@import "variables";
+
 @mixin modalStyles() {
   display: none;
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 50px; /* Location of the box */
+  position: fixed;
+  z-index: 1;
+  padding-top: 30px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 
   .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    background-color: $darker-purple;
+    margin: 10% auto;
     padding: 20px;
     border: 1px solid #888;
-    height: 50%;
-    width: 80%; /* Could be more or less, depending on screen size */
+    height: fit-content;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 
     .close {
-      color: $pink;
-      font-size: 28px;
+      align-self: flex-end;
+      padding-top: 0;
+      padding-right: 5px;
+      padding-bottom: 15px;
+      color: $purple;
+      font-size: 15px;
       font-weight: bold;
-      
-      &close:hover,
-      &close:focus {
-        color: $darker-purple;
-        cursor: pointer !important;
+      @include grow;
+
+      &:hover,
+      &:focus {
+        cursor: pointer;
       }
+    }
+
+    .quote-image {
+      padding-top: 0;
+      padding: 1rem;
+      height: 20rem;
+    }
+
+    .estimate-display {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-size: 1rem;
+    }
+
+    .request-button {
+      font-style: italic;
+      font-size: 1rem;
+      height: 5rem;
+      width: 20rem;
+      margin-top: 2rem;
+      background-color: $pink;
+      color: $darker-purple;
+      @include grow;
+      @include hover;
+
     }
   }
 }
