--- a/src/css/_trip_styles.scss
+++ b/src/css/_trip_styles.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 @mixin tripStyles() {
   article {
     background-color: $purple;
@@ -11,6 +13,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @include shrink;
 
     .location-image {
       height: 100%;
