--- a/src/css/_modal_styles.scss
+++ b/src/css/_modal_styles.scss
@@ -15,7 +15,7 @@
 
   .modal-content {
     background-color: $darker-purple;
-    margin: 10% auto;
+    margin: 3rem auto;
     padding: 20px;
     border: 1px solid #888;
     height: fit-content;
@@ -38,6 +38,7 @@
       &:hover,
       &:focus {
         cursor: pointer;
+        color: $pink;
       }
     }
 
