--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -29,11 +29,7 @@ nav {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
   @include sideStyles;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
+  @include flexDisplay(column, center, center);
   @include navStyles;
 }
 
@@ -48,9 +44,6 @@ main {
   grid-gap: 15px;
   padding: 10px;
   overflow-y: auto;
-
-  
-
   @include tripStyles;
   
 }
@@ -61,10 +54,7 @@ main {
 aside {
   grid-column: 3 / 4;
   grid-row: 2 / 3;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  @include flexDisplay(column, flex-start, center);
   @include sideStyles;
 }
 
