--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -56,6 +56,16 @@ aside {
   grid-row: 2 / 3;
   @include flexDisplay(column, flex-start, center);
   @include sideStyles;
+
+  .title {
+    margin-top: 2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .value {
+    margin-top: 0;
+  }
+
 }
 
 footer {
