--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -17,6 +17,15 @@ body {
   color: $light-blue;
 }
 
+.login-display {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  border: 5px solid $light-blue;
+  box-shadow: 0 0 30px $yellow inset;
+  background: $purple;
+  @include flexDisplay(column, space-evenly, center);
+}
+
 header {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
