--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -24,6 +24,10 @@ body {
   box-shadow: 0 0 30px $yellow inset;
   background: $purple;
   @include flexDisplay(column, space-evenly, center);
+
+  .login-button {
+    @include buttonStyles;
+  }
 }
 
 header {
