--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3,6 +3,7 @@
 @import "nav_styles";
 @import "trip_styles";
 @import "modal_styles";
+@import "admin_display";
 
 body {
   @include gridDisplay(2fr 8fr 2fr, 2fr 9fr 1fr);
@@ -90,5 +91,9 @@ footer {
 
 .modal {
   @include modalStyles;
+}
+
+.admin-display {
+  @include adminDisplay;
 }
 
