--- a/src/css/_admin_display.scss
+++ b/src/css/_admin_display.scss
@@ -5,13 +5,13 @@
   grid-template-rows: 2fr 10fr;
   grid-template-columns: 1fr;
 
-  header {
+  .admin-header {
     border: 2px solid $pink;
     grid-row: 1 / 2;
     grid-column: 1 / -1;
   }
 
-  main {
+  .admin-main {
     grid-row: 2 / -1;
     grid-column: 1 / -1;
   }
