--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -32,7 +32,7 @@ body {
   }
 }
 
-header {
+.traveler-header {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
   @include headerFooterStyles;
@@ -40,7 +40,7 @@ header {
   padding: 10px;
 }
 
-nav {
+.traveler-nav {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
   @include sideStyles;
@@ -48,7 +48,7 @@ nav {
   @include navStyles;
 }
 
-main {
+.traveler-main {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   background: linear-gradient(to bottom, $dark-purple, $darker-purple);
@@ -66,7 +66,7 @@ main {
 @include scrollbar;
 
 
-aside {
+.traveler-aside {
   grid-column: 3 / 4;
   grid-row: 2 / 3;
   @include flexDisplay(column, flex-start, center);
@@ -83,13 +83,13 @@ aside {
 
 }
 
-footer {
+.traveler-footer {
   grid-column: 1 / -1;
   grid-row: 3 / 4;
   @include headerFooterStyles;
 }
 
-.modal {
+.traveler-modal {
   @include modalStyles;
 }
 
