Break the traveler request button. Fuck

--- a/src/css/_admin_display.scss
+++ b/src/css/_admin_display.scss
@@ -16,6 +16,10 @@
   .admin-modal {
     @include modalStyles;
 
+    .close-request {
+      @include closeButtonStyles;
+    }
+
     .pending-trip {
       @include tripStyles;
       padding-top: 0;
