--- a/src/css/_modal_styles.scss
+++ b/src/css/_modal_styles.scss
@@ -25,21 +25,8 @@
     justify-content: flex-start;
     align-items: center;
 
-    .close {
-      align-self: flex-end;
-      padding-top: 0;
-      padding-right: 5px;
-      padding-bottom: 15px;
-      color: $purple;
-      font-size: 15px;
-      font-weight: bold;
-      @include grow;
-
-      &:hover,
-      &:focus {
-        cursor: pointer;
-        color: $pink;
-      }
+    .close-quote {
+      @include closeButtonStyles;
     }
 
     .quote-image {
