--- a/src/css/_admin_display.scss
+++ b/src/css/_admin_display.scss
@@ -7,10 +7,20 @@
   grid-column: 1 / -1;
   padding: 10px;
   overflow-y: auto;
+  @include gridDisplay(2fr 8fr, 2fr 10fr);
 
   .admin-header {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
+  }
+
+  .admin-nav {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    border: 2px solid $pink;
+    @include sideStyles;
+    @include flexDisplay(column, center, center);
+    @include navStyles;
   }
 
   .admin-modal {
@@ -35,13 +45,12 @@
   }
 
   main {
-    grid-row: 2 / -1;
-    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    margin-left: 0.5rem;
     grid-gap: 15px;
-    margin: 3rem;
-    padding: 10px;
     overflow-y: auto;
     @include tripStyles;
   }
