--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -15,7 +15,7 @@ body {
   font-style: italic;
   font-weight: 700;
   font-size: 14px; 
-  color: $light-blue;
+  color: $darker-purple;
 }
 
 .login-display {
@@ -38,14 +38,22 @@ body {
   @include headerFooterStyles;
   box-shadow: 0px 0px 5px 2px $yellow;
   padding: 10px;
+
+  h1 {
+    color: $light-blue;
+  }
 }
 
 .traveler-nav {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
   @include sideStyles;
-  @include flexDisplay(column, center, center);
+  @include flexDisplay(column, flex-start, center);
   @include navStyles;
+
+  label {
+    margin-top: 2rem;
+  }
 }
 
 .traveler-main {
