Add tablet and mobile breakpoints

--- a/src/css/_trip_styles.scss
+++ b/src/css/_trip_styles.scss
@@ -35,5 +35,17 @@
     p {
       align-self: center;
     }
+
+    .travelers {
+      margin-bottom: 0;
+    }
+
+    .status {
+      margin-bottom: 0;
+    }
+
+    .value {
+      margin-top: 0;
+    }
   }
 }
