--- a/src/css/_media_queries.scss
+++ b/src/css/_media_queries.scss
@@ -1,11 +1,63 @@
 @import 'variables';
 
-@mixin mobile() {
-  @media (min-width:481px) {
-    @content;
+@mixin tablet() {
+  @media screen and (max-width: 1080px) {
+    .traveler-main {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+      background: linear-gradient(to bottom, $dark-purple, $darker-purple);
+      border: $grid-border;
+      margin: 3px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 15px;
+      padding: 10px;
+      overflow-y: auto;
+      @include tripStyles;
+    }
+
+
   }
 }
 
-$mediaMaxWidth: 1260px;
-$mediaBp1Width: 960px;
-$mediaMinWidth: 480px;
+@mixin mobile() {
+  @media screen and (max-width: 800px) {
+    body {
+      height: 100vh;
+      width: calc(100vw - 20px);
+      display: grid;
+      grid-template-rows: 1fr 10fr auto;
+    }
+
+    .traveler-header {
+      grid-row: 1 / 2;
+      grid-column: 1 / -1;
+    }
+
+    .traveler-nav {
+      justify-content: flex-start;
+      grid-row: 2 / 3;
+      grid-column: 1 / -1;
+      min-height: 20rem;
+      overflow-y: scroll;
+    }
+
+    .traveler-main {
+      grid-row: 3 / 4;
+      grid-column: 1 / -1;
+      background: linear-gradient(to bottom, $dark-purple, $darker-purple);
+      border: $grid-border;
+      margin: 3px;
+      display: grid;
+      grid-template-columns: 1fr;
+      height: 15rem;
+      overflow-y: auto;
+      @include tripStyles;
+    }
+    .traveler-aside {
+      grid-row: 4 / 5;
+      grid-column: 1 / -1;
+    }
+    
+  }
+}
