--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,5 +1,14 @@
-// DOCUMENT
+// TYPE / COLORS
 $font: BlenderProBold, sans-serif;
+$black: #09071a;
+$darker-purple: #191449;
+$dark-purple: #3D0E53;
+$purple: #B05CB4;
+$pink: #D61289;
+$blue: #2B7FB5;
+$light-blue: #18F5FE;
+$yellow: #F9F300;
+$grid-border: 5px solid $pink;
 
 // MIXINS
 @mixin gridDisplay($columns, $rows) {
@@ -61,7 +70,6 @@ $font: BlenderProBold, sans-serif;
   }
 }
 
-
 @mixin grow() {
     transition: all .3s ease-in-out; 
   
@@ -90,55 +98,19 @@ $font: BlenderProBold, sans-serif;
 }
 
 @mixin scrollbar() {
-  /* width */
 ::-webkit-scrollbar {
   width: 15px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: white;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: $yellow;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: $light-blue;
 }
-}
-
-.hidden {
-  display: none;
-}
-
-// COLORS
-$black: #09071a;
-
-$darker-purple: #191449;
-
-$dark-purple: #3D0E53;
-
-$purple: #B05CB4;
-
-$pink: #D61289;
-
-$blue: #2B7FB5;
-
-$light-blue: #18F5FE;
-
-$yellow: #F9F300;
-
-$grid-border: 5px solid $pink;
-
-// Media Query Sizes
-
-@mixin mobileSize() {
-  @media only screen 
-  and (min-width: 320px) 
-  and (max-width: 812px) {
-  }
 }
