--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4,6 +4,7 @@
 @import "trip_styles";
 @import "modal_styles";
 @import "admin_display";
+@import "media_queries";
 
 body {
   @include gridDisplay(2fr 8fr 2fr, 2fr 9fr 1fr);
@@ -38,6 +39,8 @@ body {
   @include headerFooterStyles;
   box-shadow: 0px 0px 5px 2px $yellow;
   padding: 10px;
+  display: flex;
+  justify-content: center;
 
   h1 {
     color: $light-blue;
@@ -68,7 +71,6 @@ body {
   padding: 10px;
   overflow-y: auto;
   @include tripStyles;
-  
 }
 
 @include scrollbar;
@@ -105,3 +107,11 @@ body {
   @include adminDisplay;
 }
 
+.hidden {
+  display: none;
+}
+
+// MEDIA QUERIES
+
+@include tablet;
+@include mobile;
