Fix mobile viewport and bad font colors

--- a/src/css/_media_queries.scss
+++ b/src/css/_media_queries.scss
@@ -59,5 +59,15 @@
       grid-column: 1 / -1;
     }
     
+    .quote-image {
+      background-size: cover;
+      padding-top: 0;
+      background-size: cover;
+      width: 70vw;
+    }
+
+
+
+
   }
 }
