--- a/src/css/_admin_display.scss
+++ b/src/css/_admin_display.scss
@@ -12,6 +12,10 @@
   .admin-header {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
+    color: $light-blue;
+    display: flex;
+    justify-content: center;
+    @include headerFooterStyles;
   }
 
   .admin-nav {
@@ -26,7 +30,7 @@
   .admin-modal {
     @include modalStyles;
 
-    .close-request {
+    .close-approval {
       @include closeButtonStyles;
     }
 
@@ -37,10 +41,29 @@
       height: 20rem;
       width: 30rem;
       background-size: cover;
+
     }
 
     .trip-summary {
-      @include flexDisplay(column, center, center);
+      background-color: rgba(255, 255, 255, 0.523);
+      @include flexDisplay(column, flex-start, center);
+      height: 90%;
+
+      .destination {
+        margin-top: 0;
+      }
+
+      .travelers {
+        margin-bottom: 0;
+      }
+
+      .status {
+        margin-bottom: 0;
+      }
+    }
+
+    .approve-button {
+      @include buttonStyles;
     }
   }
 
@@ -53,5 +76,13 @@
     grid-gap: 15px;
     overflow-y: auto;
     @include tripStyles;
+
+    .date {
+      margin-top: 0;
+    }
+
+    .duration {
+      margin-bottom: 0;
+    }
   }
 }
