--- a/src/css/_admin_display.scss
+++ b/src/css/_admin_display.scss
@@ -41,7 +41,6 @@
       height: 20rem;
       width: 30rem;
       background-size: cover;
-
     }
 
     .trip-summary {
@@ -63,6 +62,10 @@
     }
 
     .approve-button {
+      @include buttonStyles;
+    }
+
+    .deny-button {
       @include buttonStyles;
     }
   }
