--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -33,6 +33,12 @@ body {
   }
 }
 
+.traveler-display {
+  grid-row: 1 / -1;
+  grid-column: 1 / -1;
+  @include gridDisplay(2fr 8fr 2fr, 2fr 9fr 1fr);
+}
+
 .traveler-header {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
